Write some more in the BLE chapter, only 'a new technology emerges' to do, might drop this subsection though

--- a/Scriptie/tin-bachproef.bib
+++ b/Scriptie/tin-bachproef.bib
@@ -1,5 +1,4 @@
-% This file was created with JabRef 2.10.
-% Encoding: Cp1252
+% Encoding: windows-1252
 
 
 @Article{Creeger2009,
@@ -10,6 +9,18 @@
   Number                   = {8},
   Pages                    = {50--56},
   Volume                   = {52}
+}
+
+@Article{gomez2010wireless,
+  Title                    = {Wireless home automation networks: A survey of architectures and technologies},
+  Author                   = {Gomez, Carles and Paradells, Josep},
+  Journal                  = {IEEE Communications Magazine},
+  Year                     = {2010},
+  Number                   = {6},
+  Pages                    = {92--101},
+  Volume                   = {48},
+
+  Publisher                = {IEEE Press}
 }
 
 @Article{gomez2011modeling,
@@ -36,18 +47,6 @@
   Publisher                = {Molecular Diversity Preservation International}
 }
 
-@Article{gomez2010wireless,
-  Title                    = {Wireless home automation networks: A survey of architectures and technologies},
-  Author                   = {Gomez, Carles and Paradells, Josep},
-  Journal                  = {IEEE Communications Magazine},
-  Year                     = {2010},
-  Number                   = {6},
-  Pages                    = {92--101},
-  Volume                   = {48},
-
-  Publisher                = {IEEE Press}
-}
-
 @Article{haartsen2000bluetooth,
   Title                    = {The Bluetooth radio system},
   Author                   = {Haartsen, Jaap C},
@@ -65,26 +64,6 @@
   Author                   = {Kamath, Sandeep and Lindh, Joakim},
   Journal                  = {Texas instruments application note AN092, Dallas},
   Year                     = {2010}
-}
-
-@Book{Townsend2014,
-  Title                    = {Getting Started with Bluetooth Low Energy},
-  Author                   = {Kevin Townsend, Carles Cufì, Akiba, Robert Davidson},
-  Editor                   = {Brian Sawyer, Mike Loukides},
-  Publisher                = {O'Reilly Media, Inc.},
-  Year                     = {2014},
-
-  Owner                    = {Jan},
-  Timestamp                = {2016.02.02}
-}
-
-@Book{Knuth1998,
-  Title                    = {The art of computer programming, volume 3: (2nd ed.) sorting and searching},
-  Author                   = {Knuth, Donald E.},
-  Publisher                = {Addison Wesley Longman Publishing Co., Inc.},
-  Year                     = {1998},
-
-  Address                  = {Redwood City, CA, USA}
 }
 
 @Article{martelli2014bluetooth,
@@ -107,13 +86,24 @@
   Publisher                = {SAGE Publications}
 }
 
-@Book{Pollefliet2011,
-  Title                    = {Schrijven van verslag tot eindwerk: do's en don'ts},
-  Author                   = {Pollefliet, Leen},
-  Publisher                = {Academia Press},
-  Year                     = {2011},
+@InProceedings{siekkinen2012low,
+  author =       {Siekkinen, Matti and Hiienkari, Markus and Nurminen, Jukka K and Nieminen, Johanna},
+  title =        {How low energy is bluetooth low energy? comparative measurements with zigbee/802.15. 4},
+  booktitle =    {Wireless Communications and Networking Conference Workshops (WCNCW), 2012 IEEE},
+  year =         {2012},
+  pages =        {232--237},
+  organization = {IEEE}
+}
 
-  Address                  = {Gent}
+@Book{Townsend2014,
+  Title                    = {Getting Started with Bluetooth Low Energy},
+  Author                   = {Kevin Townsend, Carles Cufì, Akiba, Robert Davidson},
+  Editor                   = {Brian Sawyer, Mike Loukides},
+  Publisher                = {O'Reilly Media, Inc.},
+  Year                     = {2014},
+
+  Owner                    = {Jan},
+  Timestamp                = {2016.02.02}
 }
 
 @Article{zheng2006toward,
