Add quote to methodology chapter

--- a/Scriptie/tin-bachproef.tex
+++ b/Scriptie/tin-bachproef.tex
@@ -261,6 +261,7 @@ Last but not least is the AllThingsTalk cloud, an Internet of Things prototyping
 
 \chapter{Methodology}
 \label{ch:methodology}
+\epigraph{``Research is formalized curiosity. It is poking and prying with a purpose.''}{Zora Neale Hurston}
 This chapter aims to explain what approaches and methods were used in the making of this thesis. It explains what methods were used for the two major parts of this thesis, being the research \& literature study and the Proof of Concept.
 
 \section{Research and literature study}
